test: update/fix integration tests
