# src/lib/model/teams.js
@@ -2,7 +2,8 @@ const mongoose = require('mongoose');
 
 const teamsSchema = new mongoose.Schema({
   teamName: { type: String, required: true, index: { unique: true } },
-  clientId: { type: String, required: true }
+  clientId: { type: String, required: true },
+	leaderboardId: { type: mongoose.Schema.Types.ObjectId, ref: 'Leaderboard'},
 });
 
 module.exports = {
